--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -32,7 +32,6 @@
         android:layout_gravity="bottom"
         app:menu="@menu/bottom_navigation_menu"
         app:itemTextColor="@color/nav_text_selector"
-        app:itemIconTint="@color/nav_icon_selector"
-        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"/>
+        app:itemIconTint="@color/nav_icon_selector" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
