--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,50 +2,49 @@
 <resources>
 
     <style name="h2">
-        <item name="android:fontFamily">@font/montserrat_bold</item>
         <item name="android:textColor">@color/g_black</item>
         <item name="android:textSize">@dimen/h2TextSize</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="h3">
-        <item name="android:fontFamily">@font/montserrat_medium</item>
         <item name="android:textColor">@color/g_black</item>
         <item name="android:textSize">@dimen/h3TextSize</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="h3_bold">
-        <item name="android:fontFamily">@font/montserrat_bold</item>
         <item name="android:textColor">@color/g_black</item>
         <item name="android:textSize">@dimen/h3TextSize</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="h4">
-        <item name="android:fontFamily">@font/montserrat_regular</item>
         <item name="android:textColor">@color/g_gray700</item>
         <item name="android:textSize">@dimen/h4TextSize</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="h4_bold">
-        <item name="android:fontFamily">@font/montserrat_medium</item>
         <item name="android:textColor">@color/g_gray700</item>
         <item name="android:textSize">@dimen/h4TextSize</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="p">
-        <item name="android:fontFamily">@font/montserrat_regular</item>
         <item name="android:textColor">@color/g_gray700</item>
         <item name="android:textSize">@dimen/pTextSize</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="p_bold">
-        <item name="android:fontFamily">@font/montserrat_bold</item>
         <item name="android:textColor">@color/g_gray700</item>
         <item name="android:textSize">@dimen/pTextSize</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="blueButtonStyle">
         <item name="android:background">@drawable/blue_background</item>
-        <item name="android:fontFamily">@font/montserrat_regular</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/h4TextSize</item>
         <item name="android:textAllCaps">false</item>
@@ -53,7 +52,6 @@
 
     <style name="whiteButtonStyle">
         <item name="android:background">@drawable/white_background</item>
-        <item name="android:fontFamily">@font/montserrat_regular</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/h4TextSize</item>
         <item name="android:textAllCaps">false</item>
@@ -64,7 +62,6 @@
         <item name="android:gravity">center</item>
         <item name="singleLine">true</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
 
