--- a/app/src/main/res/layout/fragment_add_product_prices.xml
+++ b/app/src/main/res/layout/fragment_add_product_prices.xml
@@ -43,7 +43,7 @@
                 android:layout_marginBottom="20dp"
                 style="@style/editText"/>
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button_add_price"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/medium_button_height"
