--- a/app/src/main/res/layout/fragment_detail_history.xml
+++ b/app/src/main/res/layout/fragment_detail_history.xml
@@ -37,6 +37,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline_inside_1"
                 android:layout_width="wrap_content"
@@ -58,19 +59,30 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Increase quantity"
                 android:src="@drawable/ic_back"
-                app:layout_constraintStart_toStartOf="@id/guideline_inside_1"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/text_transaction_detail"
                 style="@style/h4_bold"
+                android:textColor="@color/g_black"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
                 android:textAlignment="textStart"
                 android:text="NAMA CUSTOMER"
                 android:maxLines="1"
                 android:ellipsize="end"
                 app:layout_constraintStart_toEndOf="@id/button_back"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <ImageButton
+                android:id="@+id/button_lunas"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:src="@drawable/ic_lunas"
+                app:layout_constraintEnd_toEndOf="@id/guideline_inside_2"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -85,6 +97,65 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar_detail_history"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/receipt_action_cardview"
         android:clipToPadding="false"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/receipt_action_cardview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="40dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp">
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.06" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.94" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button_share"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                style="@style/blueButtonStyle"
+                android:layout_marginStart="35dp"
+                android:text="Share"
+                android:drawableEnd="@drawable/ic_share"
+                android:drawableTint="@color/white"
+                android:padding="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="@id/guideline4"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button_print"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                style="@style/blueButtonStyle"
+                android:backgroundTint="@color/g_orange_yellow"
+                android:layout_marginEnd="35dp"
+                android:text="Print"
+                android:drawableEnd="@drawable/ic_print"
+                android:drawableTint="@color/white"
+                android:padding="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/guideline5"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
