--- a/app/src/main/res/layout/fragment_detail_history.xml
+++ b/app/src/main/res/layout/fragment_detail_history.xml
@@ -82,6 +82,8 @@
                 android:layout_width="55dp"
                 android:layout_height="55dp"
                 android:src="@drawable/ic_lunas"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:backgroundTint="@color/blue_btn_bg_color"
                 app:layout_constraintEnd_toEndOf="@id/guideline_inside_2"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
@@ -97,8 +99,70 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar_detail_history"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/receipt_action_cardview"
+        app:layout_constraintBottom_toTopOf="@id/pay_action_cardview"
         android:clipToPadding="false"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/pay_action_cardview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="15dp"
+        app:layout_constraintBottom_toTopOf="@id/receipt_action_cardview"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp">
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.06
+" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.94" />
+
+            <TextView
+                android:id="@+id/total_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Perlu dibayar"
+                app:layout_constraintStart_toStartOf="@id/guideline9"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:id="@+id/count_total"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/total_title"
+                app:layout_constraintStart_toStartOf="@id/guideline9"
+                style="@style/h3_bold"
+                android:textColor="#ec5624" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button_pay"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                style="@style/blueButtonStyle"
+                android:backgroundTint="@color/g_red"
+                android:layout_marginEnd="35dp"
+                android:text="Bayar"
+                android:drawableEnd="@drawable/ic_print"
+                android:drawableTint="@color/white"
+                android:padding="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/guideline10"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/receipt_action_cardview"
@@ -108,7 +172,7 @@
         app:cardElevation="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="40dp">
+        android:layout_marginBottom="50dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
