--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dashboardFragment"
@@ -7,33 +7,183 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.DashboardFragment">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewTop"
+            android:layout_width="170dp"
+            android:layout_height="120dp"
+            app:cardElevation="2dp"
+            app:cardCornerRadius="10dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <TextView
+                android:id="@+id/topTotal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Produk Terlaris"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:layout_margin="18dp"
+                android:layout_gravity="center|top"/>
+
+            <TextView
+                android:id="@+id/topText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Produk Terlaris"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:layout_marginHorizontal="18dp"
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center"/>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewUnpaid"
+            android:layout_width="170dp"
+            android:layout_height="120dp"
+            app:cardElevation="2dp"
+            app:cardCornerRadius="10dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:id="@+id/unpaidTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pesanan Belum Lunas"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:layout_margin="20dp"
+                android:layout_gravity="center|top"/>
+            <TextView
+                android:id="@+id/unpaidText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Unpaid"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:layout_marginHorizontal="18dp"
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center"/>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/constraintLayout">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewOmzet"
+            android:layout_width="170dp"
+            android:layout_height="120dp"
+            app:cardElevation="2dp"
+            app:cardCornerRadius="10dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <TextView
+                android:id="@+id/omzetTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Omzet Hari Ini"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:layout_margin="18dp"
+                android:layout_gravity="center|top"/>
+
+            <TextView
+                android:id="@+id/omzetText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Omzet"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:layout_marginHorizontal="18dp"
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center"/>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewProfit"
+            android:layout_width="170dp"
+            android:layout_height="120dp"
+            app:cardElevation="2dp"
+            app:cardCornerRadius="10dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:id="@+id/profitTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Profit Bulan Ini"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:layout_margin="20dp"
+                android:layout_gravity="center|top"/>
+
+            <TextView
+                android:id="@+id/profitText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Profit"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:layout_marginHorizontal="18dp"
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center"/>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/cardViewChart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         app:cardElevation="2dp"
         app:cardCornerRadius="10dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/constraintLayout2">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="15dp">
 
             <TextView
                 android:id="@+id/TitleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Grafik Penjualan Harian"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:layout_marginStart="15dp"
+                android:textColor="@color/black"/>
 
             <RadioGroup
                 android:id="@+id/radioGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:checkableBehavior="single">
+                android:checkableBehavior="single"
+                android:layout_marginStart="15dp">
 
                 <RadioButton
                     android:id="@+id/radioButtonDaily"
@@ -68,65 +218,25 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-<!--    <TableLayout-->
-<!--        android:id="@+id/table"-->
-<!--        android:layout_width="280dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_centerInParent="true"-->
-<!--        android:padding="12dp"-->
-<!--        android:stretchColumns="*">-->
-
-<!--        <TableRow>-->
-
-<!--            <TextView-->
-<!--                style="@style/p"-->
-<!--                android:text="ID" />-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/id_text"-->
-<!--                style="@style/p"-->
-<!--                tools:text="1" />-->
-<!--        </TableRow>-->
-
-<!--        <TableRow>-->
-
-<!--            <TextView-->
-<!--                style="@style/p"-->
-<!--                android:text="Name" />-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/name_text"-->
-<!--                style="@style/p"-->
-<!--                tools:text="nemo" />-->
-<!--        </TableRow>-->
-
-<!--        <TableRow>-->
-
-<!--            <TextView-->
-<!--                style="@style/p"-->
-<!--                android:text="Supplier" />-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/supplier_text"-->
-<!--                style="@style/p"-->
-<!--                tools:text="et" />-->
-<!--        </TableRow>-->
-<!--    </TableLayout>-->
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_logout"
         style="@style/blueButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/cardView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="12dp"
-        android:text="Logout" />
+        android:text="Logout"
+        app:layout_constraintTop_toBottomOf="@id/cardViewChart"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <ProgressBar
         android:id="@+id/home_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        app:layout_constraintTop_toBottomOf="@id/button_logout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
